tests/rosetta/out/Pascal/csv-to-html-translation-1.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/csv-to-html-translation-1.pas
csv-to-html-translation-1.pas(14,19) Warning: function result variable of a managed type does not seem to be initialized
csv-to-html-translation-1.pas(28,21) Warning: function result variable of a managed type does not seem to be initialized
csv-to-html-translation-1.pas(45,8) Fatal: String exceeds line
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
