tests/rosetta/out/Pascal/csv-to-html-translation-1.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:46Z
program CsvToHtmlTranslation1;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

generic function _appendList<T>(arr: specialize TArray<T>; val: T): specialize TArray<T>;
var i,n: Integer;
begin
  n := Length(arr);
  SetLength(Result, n + 1);
  for i := 0 to n - 1 do
    Result[i] := arr[i];
  Result[n] := val;
end;

function _splitString(s, sep: string): specialize TArray<string>;
var sl: TStringList; i: Integer;
begin
  sl := TStringList.Create;
  try
    sl.Delimiter := sep[1];
    sl.StrictDelimiter := True;
    sl.DelimitedText := s;
    SetLength(Result, sl.Count);
    for i := 0 to sl.Count - 1 do
      Result[i] := sl[i];
  finally
    sl.Free;
  end;
end;

var
  c: string;
  cell: Variant;
  cells: string;
  line: Variant;
  row: string;
  rows: specialize TArray<specialize TArray<string>>;

begin
  c := 'Character,Speech
' + 'The multitude,The messiah! Show us the messiah!
' + 'Brians mother,<angry>Now you listen here! He''s not the messiah; he''s a very naughty boy! Now go away!</angry>
' + 'The multitude,Who are you?
' + 'Brians mother,I''m his mother; that''s who!
' + 'The multitude,Behold his mother! Behold his mother!';
  rows := specialize TArray<specialize TArray<string>>([]);
  for line in _splitString(c, '
') do
  begin
    rows := specialize _appendList<specialize TArray<string>>(rows, _splitString(line, ','));
  end;
  writeln('<table>');
  for row in rows do
  begin
    cells := '';
    for cell in row do
    begin
      cells := cells + '<td>' + cell + '</td>';
    end;
    writeln('    <tr>' + cells + '</tr>');
  end;
  writeln('</table>');
end.
